# swift-wallet_be

./: .gitignore  API_DOCUMENTATION.md  aws_sms_policy.json  pyproject.toml  requirements.txt  schema.yml  test_sns.py
authApi/: admin.py  error_utils.py  face_verification.py  models.py  serializers.py  urls.py  utils.py  views.py
authApi/migrations/: 0001_initial.py  0002_alter_customuser_phone_number.py  0003_alter_customuser_phone_number.py  0004_alter_otp_otp_code.py
core/: settings.py  urls.py
notificationApi/: README.md  admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
notificationApi/migrations/: 0001_initial.py
walletApi/: admin.py  ai_service.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
walletApi/migrations/: 0001_initial.py  0002_savedcard.py
